starexec-kubernetes/microk8s/YAMLFiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: starexec-service
  labels:
    app: starexec
spec:
  selector:
    app: starexec
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
